fix: v102.0.1 spacing

--- a/sass/tabs/_spacing.sass
+++ b/sass/tabs/_spacing.sass
@@ -3,7 +3,7 @@
     max-height: 29px !important
     min-height: 29px !important
     height: 29px !important
-    padding-top: (29px - 20px) !important
+    margin-top: (29px - 20px) !important
 
     &:first-child // old Chrome had a small gap near the start of the browser
         margin-left: 10px !important
